--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #23424d;
+$secondary-color: #356980;
 
-$white-color: #fff;
+$white-color: rgb(255, 255, 255);
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
